# Agent-GhostWriter

./: .env.template  .gitignore  .pre-commit-config.yaml  DraftWriterAgent.py  JDAgent.py  LICENSE  README.md  ResearcherAgent.py  ResumeAgent.py  docker-compose.tracing.yaml  docker-compose.web.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
app/: engine.py  main.py
app/models/: company.py  search.py
backend/: Dockerfile  README.md  engine.py  main.py
backend/app/: main.py  router.py
backend/app_/: engine.py  router.py
backend/models/: company.py  search.py  user.py
backend/utils/: prompts.py
config/: ghost_writer.yaml  llms.yaml
cover_letter_writer/: engine.py  jobextractor.py  main.py  prompts.py  summarizer.py  templates.py  workers.py
cover_letter_writer/utils/: data.py  prompts.py  templates.py  test.py
frontend/: .dockerignore  .env  Dockerfile  README.md  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/app/: layout.tsx  page.tsx
frontend/components/: custom-dialog.tsx  page-1.tsx  page-2.tsx  page-3.tsx  page-4.tsx  sidebar.tsx
frontend/lib/: api.ts
ghost_writer/modules/: knowledgebase.py  search.py  search_ddg.py  storm.py  vectordb.py  writer.py
ghost_writer/utils/: diff.py  logger.py  persona.py  prompt.py  workers.py
llms/: __init__.py  basellm.py  conversation.py  extractor.py  llms.py  logger.py  prompts.py
researcher/: rag.py  search.py  vectordb.py
resume_writer/: engine.py  prompts.py
resume_writer/app/: app.py
searxng/: settings.yml
streamlit/: main.py
(+13 files in other folders)
